language/move-lang/tests/move_check/typing/main_arguments_invalid.exp
error: 

   ┌── tests/move_check/typing/main_arguments_invalid.move:1:5 ───
   │
 1 │ fun main<T: copyable>(x: T, y: vector<T>, z: vector<vector<u8>>, a: vector<vector<T>>) {
   │     ^^^^ Invalid parameter for 'main'
   │                          - Found: 'T'. But expected: u8, u64, u128, bool, address, vector<u8>
   │

error: 

   ┌── tests/move_check/typing/main_arguments_invalid.move:1:5 ───
   │
 1 │ fun main<T: copyable>(x: T, y: vector<T>, z: vector<vector<u8>>, a: vector<vector<T>>) {
   │     ^^^^ Invalid parameter for 'main'
   │                                --------- Found: 'vector<T>'. But expected: u8, u64, u128, bool, address, vector<u8>
   │

error: 

   ┌── tests/move_check/typing/main_arguments_invalid.move:1:5 ───
   │
 1 │ fun main<T: copyable>(x: T, y: vector<T>, z: vector<vector<u8>>, a: vector<vector<T>>) {
   │     ^^^^ Invalid parameter for 'main'
   │                                              ------------------ Found: 'vector<vector<u8>>'. But expected: u8, u64, u128, bool, address, vector<u8>
   │

error: 

   ┌── tests/move_check/typing/main_arguments_invalid.move:1:5 ───
   │
 1 │ fun main<T: copyable>(x: T, y: vector<T>, z: vector<vector<u8>>, a: vector<vector<T>>) {
   │     ^^^^ Invalid parameter for 'main'
   │                                                                     ----------------- Found: 'vector<vector<T>>'. But expected: u8, u64, u128, bool, address, vector<u8>
   │

