language/move-lang/tests/move_check/typing/main_arguments_invalid.move
script {
fun main<T: copyable>(x: T, y: vector<T>, z: vector<vector<u8>>, a: vector<vector<T>>) {

}
}
